[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/button.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/MainMenuUI.gd" type="Script" id=2]

[node name="MainMenuUI" type="Control"]
margin_right = 1280.0
margin_bottom = 720.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.011
margin_bottom = 0.0799561
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 521.0
margin_top = 215.0
margin_right = 759.0
margin_bottom = 512.0
custom_constants/separation = 12

[node name="PlayButton" parent="CenterContainer/VBoxContainer" instance=ExtResource( 1 )]

[node name="LightModeButton" parent="CenterContainer/VBoxContainer" instance=ExtResource( 1 )]
margin_top = 103.0
margin_bottom = 194.0

[node name="DarkModeButton" parent="CenterContainer/VBoxContainer" instance=ExtResource( 1 )]
margin_top = 206.0
margin_bottom = 297.0

[connection signal="pressed" from="CenterContainer/VBoxContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/LightModeButton" to="." method="_on_LightModeButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/DarkModeButton" to="." method="_on_DarkModeButton_pressed"]
